Java17で使えるコードに戻す transfertoからIOutilityに戻す